// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic page should renders with or without name 1`] = `
<div>
  <p>
    Welcome
  </p>
</div>
`;

exports[`Basic page should renders with or without name 2`] = `
<div>
  <p>
    Hello 
    Phat
  </p>
</div>
`;
